# pandoc

./: README-MCP-WebSocket.md  README-MCP.md
mcp-server/: Dockerfile  mcp_server.py  requirements.txt  test_server.py
pandoc-server/: pandoc-server.cabal
pandoc-server/app/: Main.hs
