cabal-version:   2.4
name:            pandoc-server
version:         3.9.0.2
build-type:      Simple
license:         GPL-2.0-or-later
license-file:    COPYING.md
copyright:       (c) 2006-2024 John MacFarlane
author:          John MacFarlane <jgm@berkeley.edu>
maintainer:      John MacFarlane <jgm@berkeley.edu>
bug-reports:     https://github.com/jgm/pandoc/issues
stability:       alpha
homepage:        https://pandoc.org
category:        Text
tested-with:     GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.3, GHC == 9.12.2
synopsis:        Pandoc document conversion as an HTTP and WebSocket server
description:     Pandoc-server provides pandoc's document conversion functions
                 as an HTTP REST API and WebSocket MCP (Model Context Protocol) server.

common common-options
  default-language: Haskell2010
  build-depends:    base         >= 4.18 && < 5
  ghc-options:      -Wall -fno-warn-unused-do-bind
                    -Wincomplete-record-updates
                    -Wnoncanonical-monad-instances
                    -Wcpp-undef
                    -Wincomplete-uni-patterns
                    -Widentities
                    -Wpartial-fields
                    -Wmissing-signatures
                    -fhide-source-paths
                    -Wmissing-export-lists
                    -Wunused-packages
                    -Winvalid-haddock

  if impl(ghc >= 9.12)
    ghc-options:    -Wno-deriving-typeable

  if os(windows)
    cpp-options:      -D_WINDOWS

library
  import:        common-options
  build-depends: pandoc                >= 3.9      && < 3.10,
                 aeson                 >= 2.0.1.0  && < 2.3,
                 base64-bytestring     >= 0.1      && < 1.3,
                 bytestring            >= 0.9      && < 0.13,
                 containers            >= 0.6.0.1  && < 0.9,
                 data-default          >= 0.4      && < 0.9,
                 exceptions            >= 0.8      && < 0.11,
                 mtl                   >= 2.2      && < 2.4,
                 skylighting           >= 0.14     && < 0.15,
                 text                  >= 1.1.1.0  && < 2.2,
                 utf8-string           >= 1.0      && < 1.1,
                 servant-server        >= 0.19     && < 0.21,
                 wai                    >= 3.2      && < 3.5,
                 warp                   >= 3.3      && < 3.5,
                 wai-cors               >= 0.2      && < 0.3

  hs-source-dirs:  src
  exposed-modules: Text.Pandoc.Server

executable pandoc-mcp-server
  import:        common-options
  build-depends: pandoc-server,
                 base,
                 aeson,
                 bytestring,
                 text,
                 wai,
                 warp,
                 wai-websockets,
                 websockets,
                 network
  hs-source-dirs: app
  main-is:       Main.hs
  ghc-options:   -threaded
